// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseButton renders with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  margin: 8px 0;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
    />
  </button>
</DocumentFragment>
`;

exports[`Button renders Icon Button 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-0 {
  display: inline-block;
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 100vw;
  min-height: 16px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.75;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 16px 16px;
  width: 64px;
  height: 64px;
}

.emotion-3:disabled {
  cursor: not-allowed;
}

.emotion-3 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-3:hover:not(:disabled) {
  background-color: #02509B;
  box-shadow: 0 0 1px 0 rgba(40,41,61,0.04),0 2px 4px 0 rgba(96,97,112,0.16);
}

.emotion-3:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-3:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-3:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3 svg {
  width: 24px;
  height: 24px;
}

<button
    class="emotion-3"
    height="sizing090"
    type="button"
    width="sizing090"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <svg
          class="emotion-0"
          viewBox="0 0 24 24"
        >
          <title>
            Email icon
          </title>
          <path
            d="M20,4 L4,4 C2.9,4 2.01,4.9 2.01,6 L2,18 C2,19.1 2.9,20 4,20 L20,20 C21.1,20 22,19.1 22,18 L22,6 C22,4.9 21.1,4 20,4 L20,4 Z M20,8 L12,13 L4,8 L4,6 L12,11 L20,6 L20,8 L20,8 Z"
          />
        </svg>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button renders Icon Button with default size 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-3 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 100vw;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 8px;
  width: 32px;
  height: 32px;
  margin: 8px 0;
}

.emotion-3:disabled {
  cursor: not-allowed;
}

.emotion-3 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-3:hover:not(:disabled) {
  background-color: #02509B;
  box-shadow: 0 0 1px 0 rgba(40,41,61,0.04),0 2px 4px 0 rgba(96,97,112,0.16);
}

.emotion-3:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-3:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-3:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-0 {
  display: inline-block;
  fill: #2e2e2e;
  color: #2e2e2e;
}

<button
    class="emotion-3"
    height="sizing060"
    type="button"
    width="sizing060"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <svg
          class="emotion-0"
          viewBox="0 0 24 24"
        >
          <title>
            Email icon
          </title>
          <path
            d="M20,4 L4,4 C2.9,4 2.01,4.9 2.01,6 L2,18 C2,19.1 2.9,20 4,20 L20,20 C21.1,20 22,19.1 22,18 L22,6 C22,4.9 21.1,4 20,4 L20,4 Z M20,8 L12,13 L4,8 L4,6 L12,11 L20,6 L20,8 L20,8 Z"
          />
        </svg>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button renders Large Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: calc(8px * 0.25);
  min-height: 16px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.75;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 16px 24px;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

.emotion-1 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1 svg {
  width: 24px;
  height: 24px;
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
    />
  </button>
</DocumentFragment>
`;

exports[`Button renders Medium Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: calc(8px * 0.25);
  min-height: 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 12px 16px;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

.emotion-1 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1 svg {
  width: 24px;
  height: 24px;
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
    />
  </button>
</DocumentFragment>
`;

exports[`Button renders Small Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: calc(8px * 0.25);
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 12px;
  margin: 8px 0;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

.emotion-1 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
    />
  </button>
</DocumentFragment>
`;

exports[`Button renders when there is an icon with a colour 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-4 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 100vw;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 8px;
  width: 32px;
  height: 32px;
  margin: 8px 0;
}

.emotion-4:disabled {
  cursor: not-allowed;
}

.emotion-4 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-4:hover:not(:disabled) {
  background-color: #02509B;
  box-shadow: 0 0 1px 0 rgba(40,41,61,0.04),0 2px 4px 0 rgba(96,97,112,0.16);
}

.emotion-4:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-4:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-4:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-4 svg {
  width: 16px;
  height: 16px;
}

.emotion-4::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-0 {
  display: inline-block;
  fill: #2e2e2e;
  color: #2e2e2e;
}

<button
    class="emotion-4"
    height="sizing060"
    type="button"
    width="sizing060"
  >
    <div
      class="emotion-3"
    >
      <div
        class="emotion-1"
      >
        <svg
          class="emotion-0"
          viewBox="0 0 24 24"
        >
          <title>
            Email icon
          </title>
          <path
            d="M20,4 L4,4 C2.9,4 2.01,4.9 2.01,6 L2,18 C2,19.1 2.9,20 4,20 L20,20 C21.1,20 22,19.1 22,18 L22,6 C22,4.9 21.1,4 20,4 L20,4 Z M20,8 L12,13 L4,8 L4,6 L12,11 L20,6 L20,8 L20,8 Z"
          />
        </svg>
      </div>
      <div
        class="emotion-1"
      >
        click this!
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button renders when there is no icon 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: calc(8px * 0.25);
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 12px;
  margin: 8px 0;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

.emotion-2 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-2:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-2:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-2:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-2 svg {
  width: 16px;
  height: 16px;
}

.emotion-2::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

<button
    class="emotion-2"
    type="button"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        click this!
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button renders with different style preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  color: #0A68C1;
  border-radius: calc(8px * 0.25);
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 12px;
  margin: 8px 0;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

.emotion-1 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-1:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-1:active:not(:disabled) {
  background-color: #d5ebff;
}

.emotion-1:disabled {
  border-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
    />
  </button>
</DocumentFragment>
`;

exports[`Button renders with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: calc(8px * 0.25);
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 12px;
  margin: 8px 0;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

.emotion-1 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
    />
  </button>
</DocumentFragment>
`;
